--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css" />
 
   <!-- Chessboard -->
-  <link rel="stylesheet" href="libs/chessboard.min.css">
-  <script src="libs/chessboard.min.js"></script>
+  <link rel="stylesheet" href="libs/chessboard-1.0.0.min.css">
+  <script src="libs/chessboard-1.0.0.min.js"></script>
 
   <!-- Chess.js -->
   <script src="libs/chess.min.js"></script>
 
   <!-- jQuery -->
-  <script src="libs/jquery.min.js"></script>
+  <script src="libs/jquery-3.6.0.min.js"></script>
 </head>
 <body>
   <div class="container">
